--- a/package.json
+++ b/package.json
@@ -1,10 +1,21 @@
 {
   "name": "json-to-vue-examples",
+  "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/json-to-vue.umd.cjs",
+  "module": "./dist/json-to-vue.js",
+  "exports": {
+    ".": {
+      "import": "./dist/json-to-vue.js",
+      "require": "./dist/json-to-vue.umd.cjs"
+    }
+  },
   "version": "0.0.1",
   "description": "Examples for json-to-vue",
-  "author": "David Grimason <davidgrimason@gmail.com>",
+  "author": "David Grimason <davidgrimason@gmail.com> (https://circleoflifecycle.com/)",
   "license": "MIT",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -21,5 +32,8 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "vite": "^3.0.7"
+  },
+  "directories__UNUSED": {
+    "lib": "lib"
   }
 }
