--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "json-to-vue": "^1.0.2",
     "vue": "^3.2.37",
+    "vue-gtag": "^2.0.1",
     "vue-router": "4"
   },
   "devDependencies": {
