--- a/package.json
+++ b/package.json
@@ -12,15 +12,15 @@
   },
   "dependencies": {
     "json-to-vue": "^1.0.2",
-    "vue": "^3.2.37",
+    "vue": "^3.3.4",
     "vue-gtag": "^2.0.1",
-    "vue-router": "4"
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.3",
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8",
-    "vite": "^3.0.7"
+    "@vitejs/plugin-vue": "^4.2.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.9"
   }
 }
